[package]
name = "youtube-audio-rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# async
async-process = "1.6.0"
hyper-rustls = "0.23.2"
hyper = { version = "0.14.24", features = ["full"] }
tokio-scoped = "0.2.0"
tokio = { version = "1.25.0", features = ["full"] }

# util
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
lazy_static = "1.4.0"
xml-rs = "0.8.4"

# apis
google-youtube3 = "4.0.1"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
