[package]
name = "youtube-channel-podcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# async
hyper-rustls = "0.23.2"
hyper = { version = "0.14.24", features = ["full"] }
tokio-scoped = "0.2.0"
tokio = { version = "1.25.0", features = ["full"] }
# tokio = { version = "1.25.0", features = ["full", "tracing"] }

# util
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
humanize-rs = "0.1.5"
lazy_static = "1.4.0"
regex = "1.7.1"
serde = "1.0.152"
serde-humanize-rs = "0.1.1"
toml = "0.7.2"
xml-rs = "0.8.4"

# log
async-log = "2.0.0"
log = "0.4.17"
simple_logger = "4.0.0"

# apis
google-youtube3 = "4.0.1"
rusqlite = { version = "0.28.0", features = ["chrono"] }

# debug
# console-subscriber = "0.1.8"
